--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,10 @@
 .App {
   text-align: center;
+
+}
+body {
+    font-family: 'Roboto', sans-serif;
+  height: 100vh;
 }
 
 .App-logo {
@@ -36,3 +41,7 @@
     transform: rotate(360deg);
   }
 }
+#root {
+  height: 100%;
+}
+
